<resources>
    <string name="app_name">WRK</string>
    <string name="title_activity_gym_maps">GymMapsActivity</string>
    <string name="arms">Arms</string>
    <string name="back">Back</string>
    <string name="core">Core</string>
    <string name="chest">Chest</string>
    <string name="calves">Calves</string>
    <string name="legs">Legs</string>
    <string name="shoulders">Shoulders</string>
    <string name="cardio">Cardio</string>
    <string name="fullbody">Full Body</string>
    <string name="calisthenics">Calisthenics</string>
    <string name="navTitle1">Change Username</string>
    <string name="navTitle2">Change Password</string>
    <string name="navTitle3">Logout</string>
    <string name="uploadPicture">Upload a Picture</string>
    <string name="takePicture">Take a Picture</string>
</resources>